# PKVIO

./: .gitignore  CMakeLists.txt  PKVIO.kdev4
.kdev4/: PKVIO.kdev4
3dparty/: README.md
config/: countgitcode.sh
result/: README.md
src/: main.cpp
src/CoVisManager/: CMakeLists.txt  CoVisGraph.h  CoVisManager.cpp  CoVisManager.h  KeyPointIDManager.cpp  KeyPointIDManager.h
src/DatasetManager/: CMakeLists.txt  DatasetEuRoc.cpp  DatasetEuRoc.h  DatasetInterface.cpp  DatasetInterface.h  DatasetOfflineImp.cpp  DatasetOfflineImp.h  DatasetSimulator.h
src/DebugManager/: CMakeLists.txt  DebugInfoConfig.h  DebugManager.cpp  DebugManager.h
src/KeyFrameManager/: CMakeLists.txt  KFMapPointManager.h  KeyFrameManager.cpp  KeyFrameManager.h  KeyFramesMapPointIDManager.h
src/KeyPointManager/: CMakeLists.txt  DescriptorMatch.cpp  DescriptorMatch.h  FrameKptsDescriptor.cpp  FrameKptsDescriptor.h  KeyPointManager.cpp  KeyPointManager.h  ORBextractor.cc  ORBextractor.h  TrackByOpticalFlow.cpp  TrackByOpticalFlow.h
src/KeypointManager/: CMakeLists.txt
src/MapManager/: CMakeLists.txt
src/Solver/: CMakeLists.txt  Converter.cpp  Converter.h  Solver.cpp  Solver.h  g2oEdgeSE3Self.cpp  g2oEdgeSE3Self.h
src/System/: CMakeLists.txt  System.cpp  System.h  Version.cpp  Version.h  version.h
src/Tools/: CMakeLists.txt  Compare.h  Draw.cpp  Draw.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  getScreenWindowSize.cpp
src/Type/: CMakeLists.txt  Camera.h  Convertor.h  DataHistoryTemplate.h  FixLengthQueue.h  Frame.h  GraphNode.h  IDGenerator.h  KeyFrameNonKeyFrame.h  type.cpp  type.h
src/Viewer/: CMakeLists.txt  Viewer.cpp  Viewer.h
